Changes in 0.4.0, (SVN trunk):

 * src/util.*:
   - [FIX]   The xfree() function did not work as intended due to a programming
             error. Found, and fix suggested, by Karl Heyes.

 * src/playlist.*:
   - [FIX]   An error compareable to the one about xfree() in src/util.* has
             been fixed.

 * src/compat.c:
   - [ADD]   Implement a basename() function for Windows that behaves like the
             ones used on Windows.

 * win32/:
   - [MISC]  Remove the rather ugly HTML version of the man page from the
             distribution, and provide a much better PDF version instead.

 * various:
   - [ADD]   Allow ezstream to use TagLib for reading metadata from media
             files. TagLib (libtag_c) is now an optional dependency.
   - [ADD]   When built with TagLib support, include the song length in the
             "real-time" information line, if available.
   - [ADD]   New <metadata_progname> configuration option, which causes
             metadata to be read from the output of an external program or
             script.
   - [ADD]   New runtime control via the SIGUSR2 signal, which triggers reading
             of fresh metadata information from <metadata_progname> (metadata
             is always read at song changes.)
   - [ADD]   New <metadata_format> configuration option, to customize metadata
             strings when used with the new <metadata_progname> feature.
   - [ADD]   New '@a@' and '@t@' placeholders for separate artist and title
             metadata in de-/encoder commands.



Changes in 0.3.0, released on 2007-03-05:

 * The original author, Ed Zaleski, hands over ezstream maintainership to
   Moritz Grimm.

 * New features:
   - Playlist shuffling support, enabled via the new <shuffle> configuration
     option.
   - Playlist scripting support: Indicate that the executable in <filename>
     should be run each time to get a new media filename to stream, by setting
     the new <playlist_program> configuration option to 1.