@@ -7,6 +7,7 @@ Changes in 0.4.0, (SVN trunk):
  * src/playlist.*:
    - [FIX]   An error compareable to the one about xfree() in src/util.* has
              been fixed.
+   - [MISC]  Refuse to execute a group- or world-writeable playlist script.
 
  * src/compat.c:
    - [ADD]   Implement a basename() function for Windows that behaves like the
